Add watchService for example.txt and time